--- a/_config.yml
+++ b/_config.yml
@@ -4,17 +4,17 @@
 markdown: kramdown
 highlighter: rouge
 paginate: 5
-language: 'en-uk'
+language: "en-uk"
 
 # Website info
-name: 'Finding The Way Home'
-description: "A beautiful narrative written with the world's most elegant publishing platform. The story begins here."
+name: "Blog"
+description: "A personal blog authored by Patrick Erichsen"
 
-short_url: 'jekyller.github.io/jasper/'
+short_url: "jekyller.github.io/jasper/"
 google_analytics: UA-69281367-1
 disqus: username
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: /jasper/
+baseurl: /
 
 # Permalinks
 permalink: /:title
@@ -32,7 +32,6 @@ plugins: [jekyll-paginate]
 # Disqus comments as a per-post basis
 # ...
 
-
 # Settings for builing master branch with travis-ci
 # with jekyll-travis
 
@@ -49,9 +48,9 @@ username: jekyller
 repo: jasper
 branch: master
 relative_source: ../jasper/
-destination: ../jasper-pages/
-production_url:  https://jekyller.github.io/jasper/
-source_url:  https://github.com/jekyller/jasper/
+destination: ./_site
+production_url: https://jekyller.github.io/jasper/
+source_url: https://github.com/jekyller/jasper/
 
 exclude:
   - README.md
